--- a/horizons/src/app/auth/auth.component.html
+++ b/horizons/src/app/auth/auth.component.html
@@ -19,7 +19,7 @@
       <div class="col-lg-4 col-md-2 col-sm-12"></div>
     </div>
   </div>
-  <div [ngClass]="(isMobile$ | async) ? 'fixed-top' : 'fixed-bottom'">
+  <div [ngClass]="(isMobile$ | async) ? 'fixed-top' : ''">
     <horizons-footer-minimal></horizons-footer-minimal>
   </div>
 </div>
