--- a/horizons/src/app/auth/register/register.component.html
+++ b/horizons/src/app/auth/register/register.component.html
@@ -10,6 +10,7 @@
     <input
       required
       formControlName="email"
+      [ngClass]="{ 'is-invalid': submitted && f['email'].errors }"
       autocomplete="off"
       type="email"
       class="form-control"
@@ -17,12 +18,17 @@
       placeholder="name@example.com"
     />
     <label for="floatingInput">Email address</label>
+    <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
+      <div *ngIf="f['email']['errors']['required']">Email is required</div>
+      <div *ngIf="f['email']['errors']['email']">Email must be a valid email address</div>
+    </div>
   </div>
 
   <div class="form-floating mb-3">
     <input
       required
       formControlName="firstName"
+      [ngClass]="{ 'is-invalid': submitted && f['firstName'].errors }"
       autocomplete="off"
       type="text"
       class="form-control"
@@ -30,12 +36,16 @@
       placeholder="First Name"
     />
     <label for="floatingInput">First Name</label>
+    <div *ngIf="submitted && f['firstName'].errors" class="invalid-feedback">
+      <div *ngIf="f['firstName']['errors']['required']">First Name is required</div>
+    </div>
   </div>
 
   <div class="form-floating mb-3">
     <input
       required
       formControlName="lastName"
+      [ngClass]="{ 'is-invalid': submitted && f['lastName'].errors }"
       autocomplete="off"
       type="text"
       class="form-control"
@@ -43,12 +53,16 @@
       placeholder="Last Name"
     />
     <label for="floatingInput">Last Name</label>
+    <div *ngIf="submitted && f['lastName'].errors" class="invalid-feedback">
+      <div *ngIf="f['lastName']['errors']['required']">Last Name is required</div>
+    </div>
   </div>
 
   <div class="form-floating mb-3">
     <input
       required
       formControlName="password"
+      [ngClass]="{ 'is-invalid': submitted && f['password'].errors }"
       autocomplete="off"
       type="password"
       class="form-control"
@@ -56,22 +70,33 @@
       placeholder="Password"
     />
     <label for="password">Password</label>
+    <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
+      <div *ngIf="f['password']['errors']['required']">Password is required</div>
+      <div *ngIf="f['password']['errors']['minlength']">Password must be at least 6 characters</div>
+    </div>
   </div>
 
   <div class="form-floating mb-5">
     <input
+      required
+      formControlName="confirmPassword"
+      [ngClass]="{ 'is-invalid': submitted && f['confirmPassword'].errors }"
       type="password"
       class="form-control"
       id="confirmPassword"
       placeholder="Confirm Password"
     />
     <label for="confirmPassword">Confirm Password</label>
+    <div *ngIf="submitted && f['confirmPassword'].errors" class="invalid-feedback">
+      <div *ngIf="f['confirmPassword']['errors']['required']">Confirm Password is required</div>
+      <div *ngIf="f['confirmPassword']['errors']['mustMatch']">Passwords must match</div>
+    </div>
   </div>
   <div class="d-flex flex-column">
     <button type="submit" class="btn btn-outline-primary rounded-pill w-100">
       Register
     </button>
-    <button type="button" class="btn btn-light rounded-pill w-100 mt-1">
+    <button type="button" (click)="onReset()" class="btn btn-light rounded-pill w-100 mt-1">
       Reset
     </button>
   </div>
